--- a/2.HTML/estilos/formulario.css
+++ b/2.HTML/estilos/formulario.css
@@ -48,7 +48,7 @@ input[type="submit"]{
 
 #contact-us{
     font-weight: 700;
-    font-size: 16;
+    font-size: 16px;
 }
 
 .form-group label, .form-group input{
