--- a/2.HTML/estilos/formulario.css
+++ b/2.HTML/estilos/formulario.css
@@ -16,6 +16,11 @@
 
 body{
     background: #E0F1E7;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    width: 100vw;
 }
 
 
@@ -26,7 +31,7 @@ form{
 input, textarea{
     border-radius: 3px;
     border:none;
-    box-shadow: 0px 0px 1px #999;
+    box-shadow: 0px 0px 1px #a01111;
 }
 
 input[type="submit"]{
@@ -36,11 +41,16 @@ input[type="submit"]{
     padding: 5px 10px;
 }
 
+h4{
+    color: black;
+}
+
 .container{
     background: #fff; 
     width: 500px;
     margin: 0px auto;/*Margenes*/
     padding: 20px;
+    border-radius: 6px;
     display: flex;  
     flex-direction: column;
     align-items: center;
@@ -51,7 +61,32 @@ input[type="submit"]{
     font-size: 16px;
 }
 
+#email{
+    height: 26px;
+}
+.form-item input{
+    width: 100%;
+    height: 25px;
+}
+
+.form-group{
+    display: flex;
+    gap: 10px;
+}
+
 .form-group label, .form-group input{
     font-weight: 400;
     font-size: 14;
+}
+
+.radio-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.radio-group label{
+    display: flex;
+    border: 1px solid #ccc;
+    width: 215px;
+    align-items: center;
 }
